--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 <title>WEB1 - WELCOME</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1><a href="index.html">WEB</a></h1>
+    <div id="grid">
     <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
     </ol>
+    <div id="article">
 <h2>WEB</h2>
 <p>웹의 원래 의미는 「거미집」으로 하나의 사이트나 또는 다른 사이트와의 관계가 거미집처럼 복잡하게 얽혀 있기 때문에 웹이라고 부른다.</p>
 <img src="html.jpg" width="450px">
+</div>
+</div>
 </body>
 </html>
